# evm-rust

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  cd.yml  ci.yml
src/: instruction.rs  lib.rs  transaction.rs  vm.rs
tests/: add.rs  arithmetic.rs  basic.rs
tests/arithmetic/: add.rs  add1.json  add2.json  addmod0.json  addmod1.json  addmod1_overflow2.json  addmod1_overflow3.json  addmod1_overflow4.json  addmod1_overflowDiff.json  addmod2.json  addmod2_0.json  addmod2_1.json  addmod3.json  addmod3_0.json  addmodBigIntCast.json  addmodDivByZero.json  addmodDivByZero1.json  addmodDivByZero2.json  addmodDivByZero3.json  arith1.json  div1.json  divBoostBug.json  divByNonZero0.json  divByNonZero1.json  divByNonZero2.json  divByNonZero3.json  divByZero.json  divByZero_2.json  exp0.json  exp1.json  exp2.json  exp3.json  exp4.json  exp5.json  exp6.json  exp7.json  exp8.json  expPowerOf256Of256_0.json  expPowerOf256Of256_1.json  expPowerOf256Of256_10.json  (+152 more)
tests/arithmetic/tests/: add0.json  add3.json  add4.json
