[package]
name = "evm-rust"
version = "0.1.0"
edition = "2021"
description = "Implementation of the EVM in Rust"
repository = "https://github.com/jqphu/evm-rust"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = "0.13.1"
bytes = "1.1.0"
num_enum = "0.5.7"

[dev-dependencies]
hex-literal = "0.3.4"
