[package]
name = "evm-rust"
version = "0.1.0"
edition = "2021"
description = "Implementation of the EVM in Rust"
repository = "https://github.com/jqphu/evm-rust"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = "0.13.1"
bytes = "1.1.0"
num_enum = "0.5.7"
log = "0.4.17"

[dev-dependencies]
env_logger = "0.8.0"
glob = "0.3.0"
serde_json = "1.0.86"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
